과외 상세페이지 별점 기능 ì수정

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,8 +8,8 @@
     </div>
 
     <div class="header-icons">
-        <span class="material-icons-outlined" style="cursor: pointer;" onclick="location.href='/chat'">chat_bubble</span>
-        <span class="material-icons-outlined">person</span>
+        <span class="material-icons-outlined" style="cursor: pointer;" onclick="location.href='/chat-room'">chat_bubble</span>
+        <span class="material-icons-outlined" style="cursor: pointer;">person</span>
     </div>
 </header>
 </html>
